# wp-praxis

./: .editorconfig  .gitattributes  .gitignore  .guix-channel  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION_NEEDED.md  DEPENDENCY_AUDIT.md  FUNDING.yml  GOVERNANCE.adoc  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  LICENSE.txt  MAINTAINERS.md  MANUAL_REVIEW_NEEDED.md  README.adoc  README.md  REVERSIBILITY.md  RHODIUM_PLATINUM_ROADMAP.md  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE.md  RSR_IMPLEMENTATION.md  SECURITY.md  STATE.scm  TS_CONVERSION_NEEDED.md  codemeta.json  deny.toml  flake.nix  guix.scm  justfile  phpunit.xml
.claude/: CLAUDE.md
.github/workflows/: codeql.yml  container-policy.yml  security.yml  test.yml  verification.yml
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
Core/cli-wrapper/: README.md  mix.exs
Core/db-schema/: .formatter.exs  .gitignore  .iex.exs  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  mix.exs
Core/introspection/: README.md  info.rkt  main.rkt
Core/manifest-parser/: .gitignore  Makefile  README.md  rebar.config
SymbolicEngine/core/: README.md  Run-SymbolicAudit.ps1  Set-NormativeBaseline.ps1  Trigger-SymbolicActions.ps1  Validate-SymbolicRoles.ps1  Visualize-SymbolicDiff.ps1  symbolic.ps1
SymbolicEngine/dashboard/: .gitignore  README.md  dashboard-config.toml  index.html  package.json  tsconfig.json
SymbolicEngine/graphql/: .env.example  .gitignore  README.md  SCHEMA_GUIDE.md  codegen.yml  graphql-config.yml  package.json  schema.graphql  tsconfig.json
SymbolicEngine/swarm/: .gitignore  README.md  package.json  swarm-config.toml  tsconfig.json
docs/: CITATIONS.adoc
engine/php/: README.md  Symbol.php  composer.json  (+1 more)
examples/: EXAMPLES_SUMMARY.md  FAQ.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
plugin/: README.md  composer.json  wp-praxis.php
tests/: README.md  run-tests.ps1
wp_injector/: Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md
wp_injector/examples/: complete-workflow.toml  custom-post-type.yaml  rollback-demo.yaml  simple-option.toml
wp_injector/src/: lib.rs  main.rs
wp_injector/tests/: unit_tests.rs
wp_praxis_core/: Cargo.toml  FORMAL_VERIFICATION.md  README.adoc  README.md
wp_praxis_core/examples/: parse_manifest.rs  validate_offline.rs
wp_praxis_core/src/: database.rs  lib.rs  manifest.rs  network.rs  symbol.rs  validation.rs  verification.rs
wp_praxis_core/src/parser/: mod.rs  toml.rs  yaml.rs
wp_praxis_core/tests/: property_tests.rs  property_tests_qc_fix.txt
(+198 files in other folders)
