[package]
name = "wp_injector"
version = "0.1.0"
edition = "2021"
authors = ["WP Praxis Project"]
description = "High-performance symbolic logic injector for WordPress workflows"
license = "AGPL-3.0"

[features]
default = ["database"]
database = ["dep:sqlx", "dep:tokio", "dep:chrono"]
offline = [] # Pure validation mode, no database

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization (always needed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database access (optional via feature)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "chrono"], optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
